# Driftmap

./: .gitignore  README.md  pyproject.toml  setup.py
driftmap/core/: CMakeLists.txt
driftmap/core/include/: stats.hpp
driftmap/core/src/: bindings.cpp  stats.cpp
driftmap_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_stats.py
