[build-system]
requires = ["setuptools>=61", "wheel", "pybind11>=2.10", "cmake>=3.18"]
build-backend = "setuptools.build_meta"

[project]
name = "driftmap-core"
version = "0.1.0"
description = "Phase 1 C++ statistical core bindings"
requires-python = ">=3.9"

[project.optional-dependencies]
test = ["numpy>=1.20", "pytest>=7", "scipy>=1.7"]
